[gd_scene load_steps=3 format=3 uid="uid://dhepqlfgaey4q"]

[ext_resource type="Script" path="res://hud.gd" id="1_v6jgq"]
[ext_resource type="FontFile" uid="uid://blsku3d3pvtby" path="res://Assets/Xolonium-Regular.ttf" id="2_6x4pn"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_v6jgq")

[node name="RetryButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -131.0
offset_top = -148.0
offset_right = 131.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_6x4pn")
theme_override_font_sizes/font_size = 64
text = "Retry?"

[node name="StartTimer" type="Timer" parent="."]

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -131.0
offset_top = -248.0
offset_right = 131.0
offset_bottom = -162.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_6x4pn")
theme_override_font_sizes/font_size = 64
text = "START!"

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.5
offset_top = 100.0
offset_right = 256.5
offset_bottom = 223.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_6x4pn")
theme_override_font_sizes/font_size = 100
text = "Xorq-Out!"

[node name="TimerMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -40.5
offset_right = 22.5
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6x4pn")
theme_override_font_sizes/font_size = 64
text = "3"

[node name="GameOverMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -124.0
offset_right = 354.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6x4pn")
theme_override_font_sizes/font_size = 100
text = "GAME OVER!"

[node name="WinMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -186.5
offset_right = 354.0
offset_bottom = -63.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_6x4pn")
theme_override_font_sizes/font_size = 100
text = "YOU WIN!"
horizontal_alignment = 1

[node name="WinTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
